Reorganise code a bit